<resources>
    <string name="app_name"> SCANS(SOSAS) Sindhi </string>
    <string name="btnSync">Sync</string>
    <string name="btnUpload">Upload</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="eye">اکيون </string>
    <string name="ear">ڪن </string>
    <string name="face">منهن </string>
    <string name="neck">ڳچي </string>
    <string name="head">مٿو </string>
    <string name="chest">ڇاتي </string>
    <string name="back">پٺي </string>
    <string name="abdomen">پيٽ  </string>
    <string name="groin"> پيٽ کان هيٺيون حصو (چڏا)، شرمگاه چتڙ (ٻنڊڻ)  </string>
    <string name="finger"> آڱريون  </string>
    <string name="thumb"> اڱوٺو، ٻانهن   </string>
    <string name="lowerarm"> ٻانهن جي ڪرائي (ٺونٺ کان هيٺيون حصو) </string>
    <string name="upperarm">ڏنئورو   </string>
    <string name="foot">پير    </string>
    <string name="lowerleg">بڪيون     </string>
    <string name="upperleg">رانون      </string>
    <string name="ta01"> Cluster Number </string>
    <string name="ta06"> Village </string>
    <string name="ta09"> ڇا ھاڻي آءٌ انٽرويو شروع ڪري سگھان ٿي/ٿو؟ </string>
    <string name="ta09c"> گھرو آف / اجازت دستياب ناهي. </string>
    <string name="tdh"> SECTION D: Surgeons Overseas Assessment of Surgical Need (SOSAS) </string>
    <string name="td01"> گذريل پنجن سالن جي دوران توهان جي ڪنهن ٻار جي وفات ٿي؟ </string>
    <string name="td02"> جيڪڏهن ها ته مون کي اهو ٻڌي تمام گهڻو افسوس ٿيو، گذريل پنجن سالن جي دوران توهان جي گهر ۾ ڪيترن ٻارن جي وفات ٿي؟ </string>
    <string name="td02a"> ٻارن جو تعداد </string>
    <string name="td02b"> ٻارن جا نالا </string>
    <string name="td03"> وفات ٿيل ٻار جي ماءُ جو نالو </string>
    <string name="tdhh"> Deceased Child </string>
    <string name="td04"> وفات ٿيندڙ ٻار جي عمر </string>
    <string name="td04dd"> ڏينهن </string>
    <string name="td04mm"> مهينا </string>
    <string name="td04yy"> سال </string>
    <string name="td05"> وفات ٿيندڙ ٻار جي جنس </string>
    <string name="td05a"> ڇوڪرو </string>
    <string name="td05b"> ڇوڪري </string>
    <string name="td06"> وفات جي تاريخ </string>
    <string name="td07"> وفات ڪرڻ کان هڪ هفتو پهريان تائين ٻار کي بيان ڪيلن مان ڪو مسئلو هو؟ </string>
    <string name="td07a"> زخم ڌڪ لڳڻ ڪري </string>
    <string name="td07b"> زخم بغير ڪنهن ڌڪ جي </string>
    <string name="td07c"> پيدا ٿيڻ دوران بيمار يا رت اچڻ </string>
    <string name="td07d"> جسم جو ڦهلاءُ يا سوڄ </string>
    <string name="td07e"> پيدائشي نقص </string>
    <string name="td07f"> حادثاتي نقص </string>
    <string name="td07g"> پيٽ جو وڏو ٿيڻ يا سور يا پيٽ سڄڻ </string>
    <string name="td07h"> انهن مان ڪا به نه </string>
    <string name="td08"> زخم يا حادثي جو قسم: ڇا مسئلو زخمي ٿيڻ يا ڪنهن حادثي کانپوءِ ٿيو </string>
    <string name="td09"> جيڪڏهن ها ته ڪهڙي قسم جو حادثو ؟ </string>
    <string name="td09a"> ڪار، ٽرڪ يا بس جو حادثو </string>
    <string name="td09b"> موٽر سائيڪل جو حادثو </string>
    <string name="td09c"> پنڌ هلندي يا سائيڪل جو حادثو </string>
    <string name="td09d"> گولي يا ڪنهن آتشي هٿيار جو حادثو </string>
    <string name="td09e"> وڍجڻ، ڇرو لڳڻ، رهڙجڻ يا چيڀاٽجڻ </string>
    <string name="td09f"> ڪنهن جانور جو چڪ پائڻ يا حملو ڪرڻ </string>
    <string name="td09g"> ڪرڻ </string>
    <string name="td09h"> کليل باه يا ڌماڪو </string>
    <string name="td09i"> ڪا گرم شي لڳڻ يا سڙڻ </string>
    <string name="td10"> ڇا توهان ٻار جي وفات کان پهريان ان کي ڪنهن اسپتال يا معالج کي ڏيکاريو ؟ </string>
    <string name="td11"> (نالي) کي علاج لاءِ ڪٿي وٺي ويا ؟ </string>
    <string name="td11a"> گھر ۾ </string>
    <string name="td11b"> سرڪاري اسپتال ۾ </string>
    <string name="td11c"> خانگي اسپتال ۾ </string>
    <string name="td11d"> فلاحي اداري جي اسپتال ۾ </string>
    <string name="td11e"> حڪيم، طبيب يا ڏاهو </string>
    <string name="td12"> ٻار جوڪهڙي قسم جو علاج ٿيو </string>
    <string name="td12a"> ڪابه جراحي يا علاج نه ٿيو </string>
    <string name="td12b"> صرف دوا ڏني وئي </string>
    <string name="td12c"> وڏو آپريشن جنهن ۾ مريض کي بيهوش ڪيو ويندو آهي </string>
    <string name="td12d"> ننڍو آپريشن ملم پٽي ٽانڪا لڳائڻ دوا وغيره </string>
    <string name="td12other"> ٻيو ڪجهه وضاحت ڪريو </string>
    <string name="td13"> ڪهڙن سببن جي ڪري ٻار کي ڪنهن اسپتال ۾ ڪنهن ڊاڪٽر يا نرس کي نه ڏيکاريو ويو يا ان جو آپريشن يا ملم پٽي نه ڪرائي وئي ؟ </string>
    <string name="td13a"> علاج لاءِ پئسا نه هئا </string>
    <string name="td13b"> ڀاڙي ڪرائي لاءِ پئسا نه هئا </string>
    <string name="td13c"> وقت جي ڪمي (علاج جي انتظام کان پهريان وفات ٿي وئي) </string>
    <string name="td13d"> خوف يا بي اعتباري </string>
    <string name="td13e"> سهولت، معالج، سامان موجود نه هئا </string>
    <string name="td13f"> علاج جي ضرورت نه هئي </string>
    <string name="td13other"> ٻيو ڪجهه وضاحت ڪريو </string>
    <string name="td14"> ٻار جي وفات ڪٿي ٿي ؟ </string>
    <string name="td14a"> گھر ۾ </string>
    <string name="td14b"> اسپتال ۾ </string>
    <string name="td14c"> اسپتال ويندي رستي ۾ </string>
    <string name="td14d"> ڪنهن ٻي جاءِ تي </string>
    <string name="teh"> اکيون </string>
    <string name="tehh"> EYES Problems </string>
    <string name="te03"> توهان جي (ٻار جو نالو) کي ڪڏهن اکين ۾ زخم، سڙڻ، ڳڙ، نقص، نظرجو يا اهڙو ڪو ٻيو مسئلو ٿيو آهي ؟ </string>
    <string name="te03a"> ھا </string>
    <string name="te03b"> نه </string>
    <string name="te04"> اهڙو مسئلو ان سان ڪيترا دفعا ٿيو؟ </string>
    <string name="te05"> مونکي ٻڌايو ته ڪهڙو مسئلو ٿيو؟ (هڪ کان وڏيڪ جواب اچي سگهن ٿا) </string>
    <string name="te05a"> زخم ڌڪ لڳڻ ڪري </string>
    <string name="te05b"> زخم بغير ڪنهن ڌڪ جي </string>
    <string name="te05c"> سڙڻ </string>
    <string name="te05d"> جسم ۾ غير ضروري واڌ، ڳڙ </string>
    <string name="te05e"> پئدائشي نقص </string>
    <string name="te05f"> حادثاتي نقص </string>
    <string name="te05g"> نابين ٿيڻ </string>
    <string name="te05h"> نظر گهٽ ٿيڻ </string>
    <string name="te05i">ٻوڙو ٿيڻ</string>
    <string name="te05j">جسم ۾ غير ضروري واڌ، ڳڙ</string>
    <string name="te05k">ساهه جي ناليءَ ۾ ڪا شئي ڦاسڻ</string>
    <string name="te05l">دل جو مسئلو (پئدائشي)</string>
    <string name="te05m">جسم ۾ غير ضروري واڌ، سخت ڳڙ</string>
    <string name="te05n">جسم ۾ غير ضروري واڌ، گهٽجندڙ ڳڙ</string>
    <string name="te05o">پيٽ ۾ سور يا مروڙ پوڻ يا پيٽ سڄڻ</string>
    <string name="te05p">پيشاب ۾ رڪاوٽ</string>
    <string name="te05q">گُردن۾ سور/ پٿري</string>
    <string name="te05r">پائخاني ۾ رت اچڻ </string>
    <string name="te05s">پائخاني ۾ رت اچڻ </string>
    <string name="te05t">جسم ۾ غير ضروري واڌ، گهٽجندڙ ڳڙ</string>
    <string name="te05u">زخم مان رت يا پس وهڻ</string>
    <string name="te06"> ڇا مسئلو ڪنهن ڌڪ لڳڻ يا حادثي جي ڪري ٿيو؟ </string>
    <string name="te07"> جيڪڏهن ها ته ڪهڙي قسم جو حادثو؟ </string>
    <string name="te07a"> ڪار، ٽرڪ يا بس جو حادثو </string>
    <string name="te07b"> موٽر سائيڪل جو حادثو </string>
    <string name="te07c"> پنڌ هلندي يا سائيڪل جو حادثو </string>
    <string name="te07d"> گولي يا ڪنهن آتشي هٿيار جو حادثو </string>
    <string name="te07e"> وڍجڻ، ڇرو لڳڻ، رهڙجڻ يا چيڀاٽجڻ </string>
    <string name="te07f"> ڪنهن جانور جو چڪ پائڻ يا حملو ڪرڻ </string>
    <string name="te07g"> ڪرڻ </string>
    <string name="te07h"> کليل باه يا ڌماڪو </string>
    <string name="te07i"> ڪا گرم شي لڳڻ يا سڙڻ </string>
    <string name="te08"> اهو مسئلو ٻار کي ڪڏهن کان شروع ٿيو؟ </string>
    <string name="te08a"> گذريل هفتي دوران </string>
    <string name="te08b"> گذريل مهيني ۾ </string>
    <string name="te08c"> گذريل ٻارنهن مهينن ۾ پر هڪ مهيني کان اڳ </string>
    <string name="te08d"> گذريل ٻارنهن مهينن کان اڳ ۾ </string>
    <string name="te15"> ڇا ان جي هڏي ٽٽي پئي يا جوڙ مان نڪري وئي ؟ </string>
    <string name="te09"> ڇا توهان ٻار کي علاج لاءِ ڪنهن اسپتال يا معالج کي ڏيکاريو ؟ </string>
    <string name="te10"> (نالي) کي علاج لاءِ ڪٿي وٺي ويا ؟ </string>
    <string name="te10a"> گھر ۾ </string>
    <string name="te10b"> سرڪاري اسپتال ۾ </string>
    <string name="te10c"> خانگي اسپتال ۾ </string>
    <string name="te10d"> فلاحي اداري جي اسپتال ۾ </string>
    <string name="te10e"> حڪيم، طبيب يا ڏاهو </string>
    <string name="te11"> ٻار جوڪهڙي قسم جو علاج ٿيو؟ </string>
    <string name="te11a"> ڪابه جراحي يا علاج نه ٿيو </string>
    <string name="te11b"> صرف دوا ڏني وئي </string>
    <string name="te11c"> وڏو آپريشن جنهن ۾ مريض کي بيهوش ڪيو ويندو آهي </string>
    <string name="te11d"> ننڍو آپريشن ملم پٽي ٽانڪا لڳائڻ دوا وغيره </string>
    <string name="te11e"> جوڙڻ، پٽو يا پلستر ڪرڻ وغيره </string>
    <string name="te11f"> نڪتل هڏي جي جوڙ کي ساڳي جاءِ تي آڻڻ </string>
    <string name="te12"> ڪهڙن سببن جي ڪري ٻار کي ڪنهن اسپتال ۾ ڪنهن ڊاڪٽر يا نرس کي نه ڏيکاريو ويو يا ان جو آپريشن يا ملم پٽي نه ڪرائي وئي ؟ </string>
    <string name="te12a"> علاج لاءِ پئسا نه هئا </string>
    <string name="te12b"> ڀاڙي ڪرائي لاءِ پئسا نه هئا </string>
    <string name="te12c"> وقت جي ڪمي (علاج جي انتظام کان پهريان وفات ٿي وئي) </string>
    <string name="te12d"> خوف يا بي اعتباري </string>
    <string name="te12e"> سهولت، معالج، سامان موجود نه هئا </string>
    <string name="te12f"> علاج جي ضرورت نه هئي </string>
    <string name="te12other"> ٻيو ڪجهه وضاحت ڪريو </string>
    <string name="te13"> ڇا اهو مسئلو يا معذوري اڃان تائين ٻار جي روزمره جي زندگيءَ تي اثر انداز ٿئي ٿي؟ (معذوري هڪ جسماني مسئلو آهي جيڪو توهان جي زندگيءَ کي متاثر ڪري ٿو، يا توهان کي روزمره جي ڪم ڪار ۾ ڏکيائن جو سبب بڻجي ٿي) </string>
    <string name="te13a"> حالت معذوري جهڙي نه آهي </string>
    <string name="te13b"> شرمساري محسوس ڪري ٿو، ٿي </string>
    <string name="te13c"> پهريان وانگر ڪنهن ڪم ڪرڻ جي قابل نه رهيو آهي </string>
    <string name="te13d"> ان کي چر پر ۾ مدد جي ضرورت پوي ٿي </string>
    <string name="te13e"> ان کي روزمره جي زندکي جي هر ڪم ۾ مدد جي ضرورت پوي ٿي </string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٹرویو شروع کریں </string>
    <string name="nextSection"> اگلا حصہ </string>
    <string name="dcstatus"> انٹرویو کا نتیجہ </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="yes"> ھا </string>
    <string name="no"> نه </string>
    <string name="other"> ٻيو ڪجهه </string>
    <string name="istatus1"> مکمل </string>
    <string name="istatus2"> انڪار ڪيو </string>
    <string name="istatus3"> گھر مستقل طور بند آھي </string>
    <string name="istatus4"> گھر عارضي طور بند آھي </string>
    <string name="istatus5">(5) سالن کان گهٽ عمر جو ٻار نه آهي </string>
    <string name="ed_letterOnly">QWERTYUIOPASDFGHJKLZXCVBNM qwertyuiopasdfghjklzxcvbnm</string>
    <string name="te03a1">توهان جي (ٻار جو نالو) کي ڪڏهن اکين ۾ زخم، سڙڻ، ڳڙ، نقص، نظرجو يا اهڙو ڪو ٻيو مسئلو ٿيو آهي؟</string>
    <string name="te03a2">توهان جي (ٻار جو نالو) کي ڪڏهن ڪن ۾ زخم، سڙڻ، ڳڙ، نقص، ٻڌڻ ۾ ڪو مسئلو يا ڪنهن جانور جي چڪ پائڻ جو مسئلو، واقعو يا اهڙو ڪو ٻيو مسئلو ٿيو آهي؟</string>
    <string name="ext">Extremities</string>
    <string name="td15">ڇا توهان جي (ٻار جو نالو) کي ڪڏهن هٿن، ٻانهن، ٽنگن يا پيرن ۾ زخم، سڙڻ، ڳڙ، نقص يا هڏي ٽٽڻ ڪنهن جانور جي چڪ پائڻ جو مسئلو، واقعو يا آپريشن ٿيو؟</string>
    <string name="td16">جسم جي ڪهڙي حصي ۾مسئلو ٿيو؟(هڪ کان وڌيڪ جواب اچي سگهن ٿا)</string>
    <string name="td16a">آڱريون </string>
    <string name="td16b">اڱوٺو، ٻانهن</string>
    <string name="td16c">ٻانهن جي ڪارائي </string>
    <string name="td16d">ڏنئورو </string>
    <string name="td16e">پير </string>
    <string name="td16f">بڪيون </string>
    <string name="td16g">رانون </string>
</resources>