<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SectionB02Activity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_scans_sosas.ui.SectionB02Activity" />

    </data>

    <ScrollView
        style="@style/i_scrollview"
        android:layoutDirection="rtl"
        android:textDirection="rtl">

        <LinearLayout
            android:id="@+id/ll03"
            style="@style/linearlayout_view">

            <TextView
                android:id="@+id/headingTitle"
                style="@style/HeadingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ext" />


            <!-- J115 - Radio -->
            <androidx.cardview.widget.CardView
                android:id="@+id/te03cv"
                style="@style/cardView">

                <LinearLayout style="@style/linearlayout_view">

                    <TextView
                        android:id="@+id/te03a1"
                        style="@style/i_textview"
                        android:text="@string/td15" />

                    <RadioGroup
                        android:id="@+id/td15"
                        style="@style/radiogroup"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/td15a"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/yes" />

                        <RadioButton
                            android:id="@+id/td15b"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/no" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- J116 - CheckBox -->
            <androidx.cardview.widget.CardView
                android:id="@+id/te04cv"
                style="@style/cardView"
                android:visibility='@{td15b.checked? View.GONE : View.VISIBLE}'>

                <LinearLayout
                    android:id="@+id/td16sos"
                    style="@style/linearlayout_view">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/td16" />

                    <LinearLayout
                        android:id="@+id/td16sosChk"
                        style="@style/linearlayout_view"
                        android:tag="0">

                        <CheckBox
                            android:id="@+id/td16a"
                            style="@style/checkbox"
                            android:text="@string/td16a" />

                        <CheckBox
                            android:id="@+id/td16b"
                            style="@style/checkbox"
                            android:text="@string/td16b" />

                        <CheckBox
                            android:id="@+id/td16c"
                            style="@style/checkbox"
                            android:text="@string/td16c" />

                        <CheckBox
                            android:id="@+id/td16d"
                            style="@style/checkbox"
                            android:text="@string/td16d" />

                        <CheckBox
                            android:id="@+id/td16e"
                            style="@style/checkbox"
                            android:text="@string/td16e" />

                        <CheckBox
                            android:id="@+id/td16f"
                            style="@style/checkbox"
                            android:text="@string/td16f" />

                        <CheckBox
                            android:id="@+id/td16g"
                            style="@style/checkbox"
                            android:text="@string/td16g" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                style="@style/linearlayout_view"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:onClick='@{() -> callback.BtnContinue()}'
                    android:padding="10dp"
                    android:text="@string/nextSection"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility='visible' />

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:onClick='@{() -> callback.BtnEnd()}'
                    android:padding="10dp"
                    android:text="@string/end_interview"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility='visible' />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>