<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SectionCActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_scans_sosas.ui.SectionCActivity" />

    </data>

    <ScrollView
        style="@style/i_scrollview"
        android:background="@drawable/sosas_bg"
        android:layoutDirection="rtl"
        android:textDirection="rtl">

        <LinearLayout
            android:id="@+id/ll03"
            style="@style/linearlayout_view">

            <TextView
                android:id="@+id/headingTitle"
                style="@style/HeadingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teh" />


            <!--Radio Button Te03-->
            <androidx.cardview.widget.CardView
                android:id="@+id/te03cv"
                style="@style/cardView">

                <LinearLayout style="@style/linearlayout_view">

                    <TextView
                        android:id="@+id/te03a1"
                        style="@style/i_textview"
                        android:text="@string/te03" />

                    <RadioGroup
                        android:id="@+id/te03"
                        style="@style/radiogroup"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/te03a"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/te03a" />

                        <RadioButton
                            android:id="@+id/te03b"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/te03b" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--Edit Text Te04-->
            <androidx.cardview.widget.CardView
                android:id="@+id/te04cv"
                style="@style/cardView"
                android:visibility='@{te03b.checked? View.GONE : View.VISIBLE}'>

                <LinearLayout
                    android:id="@+id/te04sos"
                    style="@style/linearlayout_view"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/i_textview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/te04" />

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/te04"
                        style="@style/EditTextNum"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:hint="@string/number"
                        android:maxLength="1"
                        app:maxValue="9"
                        app:minValue="1"
                        app:type="range" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                style="@style/linearlayout_view"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:onClick='@{() -> callback.BtnContinue()}'
                    android:padding="10dp"
                    android:text="@string/nextSection"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility='visible' />

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:onClick='@{() -> callback.BtnEnd()}'
                    android:padding="10dp"
                    android:text="@string/end_interview"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility='visible' />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>