<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.other.EndingActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_scans_sosas.ui.other.EndingActivity" />

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sosas_bg"
        android:layoutDirection="rtl"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Take Photo   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVtakePhoto"
                    style="@style/cardView">

                    <LinearLayout android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical">
                        <TextView
                            style="@style/labels"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dcstatus" />

                            <Button
                                android:id="@+id/btnPhoto"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="12dp"

                                android:onClick="takePhoto"
                                android:text="Take a photo"
                                android:drawableStart="@drawable/camera"
                                android:drawablePadding="8dp"
                            />

                            <EditText
                                android:id="@+id/fileName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="12dp"
                                android:textColor="#7f7f7f7f"
                                android:enabled="false"
                                android:textSize="14dp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <!--RS9-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/RS9cv"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/labels"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dcstatus" />

                        <RadioGroup
                            android:id="@+id/istatus"
                            style="@style/radiogroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/istatus1"
                                style="@style/radiobutton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:text="@string/istatus1"
                                android:textSize="25sp" />

                            <RadioButton
                                android:id="@+id/istatus2"
                                style="@style/radiobutton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:text="@string/istatus2"
                                android:textSize="25sp" />

                            <RadioButton
                                android:id="@+id/istatus3"
                                style="@style/radiobutton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:text="@string/istatus3"
                                android:textSize="25sp" />

                            <RadioButton
                                android:id="@+id/istatus4"
                                style="@style/radiobutton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:text="@string/istatus4"
                                android:textSize="25sp" />

                            <RadioButton
                                android:id="@+id/istatus5"
                                style="@style/radiobutton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:text="@string/istatus5"
                                android:textSize="25sp" />


                        </RadioGroup>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/navbuttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:onClick='@{() -> callback.BtnContinue()}'
                    android:text="@string/end_interview"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>
